# sionna-visualizer

./: .env.example  .gitignore  LICENSE  README.md  commit_diff.txt  diff.txt  docker-compose.yml  null  pom_diff.txt  python-bridge.dockerfile  render.yaml
backend/: .gitignore  Dockerfile  pom.xml
backend/src/main/resources/: application.yml
docs/: antigravity-prompts.md  architecture.md  aws-setup.md
frontend/: .dockerignore  angular.json  nginx.conf  package-lock.json  package.json  tsc_errors.txt
frontend/src/: index.html  proxy.conf.json  styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/guards/: auth.guard.ts
frontend/src/app/interceptors/: auth.interceptor.ts
frontend/src/app/models/: package-options.interface.ts  simulation-parameter.interface.ts  simulation-result.model.ts
frontend/src/environments/: environment.prod.ts  environment.ts
python-bridge/: .env.example  .gitignore  Dockerfile  beam_pattern.py  channel_capacity.py  channel_model_simulator.py  colormap.py  estimate.py  main.py  measurement_overlay.py  models.py  modulation_comparison.py  multi_tx.py  path_loss.py  ray_directions.py  requirements.txt  sigmf_analyzer.py  sinr_steering.py  sionna_runner.py  thz_atmospheric_calculator.py  ue_trajectory.py
sdk/: README.md  pyproject.toml  setup.py
sdk/examples/: awgn_example.py  basic_tracking.py  beam_pattern_example.py
sdk/sionna_visualizer/: __init__.py  client.py  exceptions.py  models.py  tracker.py
sdk/tests/: test_tracker.py
(+359 files in other folders)
