[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sionna-visualizer"
version = "1.0.0"
description = "Python SDK for Sionna Visualizer — visualize NVIDIA Sionna 6G simulation results with one line of code"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Vinayak Gote", email = "your-email@gmail.com"}
]
keywords = [
  "sionna", "6g", "wireless", "simulation",
  "visualization", "nvidia", "telecommunications",
  "ber", "beam-pattern", "channel-model"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Telecommunications",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dependencies = [
  "requests>=2.28.0",
  "numpy>=1.21.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black>=22.0",
  "flake8>=4.0"
]

[project.urls]
Homepage = "https://sionna-visualizer.vercel.app"
Documentation = "https://sionna-visualizer.vercel.app/api-docs"
Repository = "https://github.com/Vinu2111/sionna-visualizer"
"Bug Tracker" = "https://github.com/Vinu2111/sionna-visualizer/issues"
